# OpenGL-Tutorial

./: .clang-format  .gitignore  README.md
include/glad/: glad.h
src/: Makefile  README.md  TODO.md  main.cpp
src/1-Getting-Started/1.0-hello-window/: main.cpp
src/1-Getting-Started/1.1-hello-window/: CMakeLists.txt  Makefile  compile_commands.json  glad.c  main.cpp
src/1-Getting-Started/1.2-hello_triangle/: main.cpp
src/1-Getting-Started/1.3-shaders/: Makefile  glad.c  main.cpp
src/1-Getting-Started/2.0-hello_triangle/: compile_commands.json  main.cpp
src/1-Getting-Started/2.1-hello_triangle/: main.cpp
src/1-Getting-Started/2.2-hello_triangle/: Makefile  compile_commands.json  main.cpp
src/1-Getting-Started/2.3-hello_triangle/: compile_commands.json  main.cpp
src/1-Getting-Started/3.0-shaders/: compile_commands.json  main.cpp
src/template/: CMakeLists.txt  Makefile  compile_commands.json  main.cpp
